# universal-battery-diagnostics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_visualizations.py
.github/workflows/: form-submission.yml
configs/: default_config.yaml
configs/analysis_presets/: comprehensive_analysis.yaml  quick_health_check.yaml
configs/hardware_profiles/: uart_adapters.yaml
configs/manufacturer_profiles/: dewalt.yaml  makita.yaml  milwaukee.yaml  ryobi.yaml
docs/: PROJECT_STRUCTURE.md  TESTING_GUIDE.md  advanced.html  analytics.html  index.html  submit.html
examples/: README.md
scripts/: setup_development.py  test_arduino_cli.py  test_makita_cli.py  test_milwaukee_cli.py
tests/: conftest.py  test_arduino_interface.py  test_makita_nec78k0.py  test_milwaukee_m18.py
tests/integration/: test_cli_commands.py  test_full_workflow.py
tests/unit/: test_milwaukee_protocol.py
ubdf/: __init__.py
ubdf/cli/: main.py
ubdf/core/analytics/: battery_analyzer.py
ubdf/core/database/: enhanced_schema.sql  models.py
ubdf/core/visualizations/: dashboard_generator.py
ubdf/hardware/: __init__.py  arduino_interface.py
ubdf/hardware/base/: protocol_interface.py
ubdf/hardware/manufacturers/dewalt/: __init__.py  xr_protocol.py
ubdf/hardware/manufacturers/makita/: __init__.py  lxt_protocol.py  nec78k0_flasher.py
ubdf/hardware/manufacturers/milwaukee/: __init__.py  m18_diagnostics.py  m18_protocol.py  m18_protocol_core.py  m18_registers.py
ubdf/hardware/manufacturers/ryobi/: __init__.py  one_plus_protocol.py
ubdf/software/visualization/: plotly_dashboards.py
ubdf/testing/: mock_data_generator.py
